examples/errors/div_by_zero.xpln
x := 3/0;
output x;
return 1;
